--- a/package.json
+++ b/package.json
@@ -4,27 +4,28 @@
   "private": true,
   "homepage": "https://zmiievskyi.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.2.2",
     "formik": "^2.2.9",
-    "nanoid": "^4.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.6",
-    "styled-system": "^5.1.5",
-    "web-vitals": "^2.1.3",
-    "yup": "^0.32.11",
-    "yup-phone": "^1.3.2"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "set PORT=4444 && react-scripts start",
+    "start": "set PORT=4445 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
+   "devDependencies": {
     "redux-logger": "^3.0.6"
   }
 }
